<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleCalculator</string>
    <string name="b_1">1</string>
    <string name="b_2">2</string>
    <string name="b_3">3</string>
    <string name="b_4">4</string>
    <string name="b_5">5</string>
    <string name="b_6">6</string>
    <string name="b_7">7</string>
    <string name="b_8">8</string>
    <string name="b_9">9</string>
    <string name="b_0">0</string>
    <string name="b_add">+</string>
    <string name="b_minus">-</string>
    <string name="b_multiply">*</string>
    <string name="b_divide">/</string>
    <string name="b_decimal">.</string>
    <string name="b_equals">=</string>
    <string name="x_squared">x²</string>
    <string name="sqr_root">√</string>
    <string name="b_clear">clear</string>
    <string name="action_settings">Settings</string>
    <string name="back_space">&lt;–</string>

</resources>
