<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow
        android:layout_weight="8"
        android:gravity="bottom">

        <TextView
            android:id="@+id/display"
            android:layout_width="fill_parent"
            android:text=""
            android:layout_span="4"
            android:maxLength="8"
            android:textSize="72sp"
            android:gravity="right" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/b_square"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_functions"
            android:text="@string/x_squared" />

        <Button
            android:id="@+id/b_square_root"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_functions"
            android:text="@string/sqr_root" />

        <Button
            android:id="@+id/b_clear"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_span="2"
            android:background="@drawable/custom_button_operation"
            android:text="@string/b_clear" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/b_7"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_7" />

        <Button
            android:id="@+id/b_8"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_8" />

        <Button
            android:id="@+id/b_9"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_9" />

        <Button
            android:id="@+id/b_divide"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_operation"
            android:text="@string/b_divide" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/b_4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_4" />

        <Button
            android:id="@+id/b_5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_5" />

        <Button
            android:id="@+id/b_6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_6" />

        <Button
            android:id="@+id/b_multiply"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_operation"
            android:text="@string/b_multiply" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/b_1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_1" />

        <Button
            android:id="@+id/b_2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_2" />

        <Button
            android:id="@+id/b_3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_3" />

        <Button
            android:id="@+id/b_minus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_operation"
            android:text="@string/b_minus" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/b_0"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_number"
            android:text="@string/b_0" />

        <Button
            android:id="@+id/b_decimal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_operation"
            android:text="@string/b_decimal" />

        <Button
            android:id="@+id/b_back_space"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_operation"
            android:text="@string/back_space" />

        <Button
            android:id="@+id/b_add"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/custom_button_operation"
            android:text="@string/b_add" />
    </TableRow>
    <TableRow
        android:layout_weight="1"
        android:gravity="center">

    <Button
        android:id="@+id/b_equals"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/custom_button_operation"
        android:text="@string/b_equals"
        android:layout_span="4" />
    </TableRow>
</TableLayout>
